cartitem overflow fix

--- a/client/src/components/CartItem/CartItem.scss
+++ b/client/src/components/CartItem/CartItem.scss
@@ -10,9 +10,10 @@
 
     span {
         margin: 0 2.5rem;
+        height: 198%;
         img {
-            width: 40%;
-            height: 20%;
+            width: 100%;
+            height: 100%;
         }
     }
 
